# uav-rai-demo

./: .gitignore  .gitmodules  README.md  rosinstall
.github/workflows/: ci-ros2.yml  ci-standalone.yml
tuning/: config.txt  plot.py  plot2.py
uav-rai-demo/: CMakeLists.txt  package.xml
uav-rai-demo/config/: all_crazyflies.yaml  crazyflie_types.yaml  crazyflies.yaml  crazyswarm2_server.yaml  demo1  droneRace.g  motion_capture.yaml  rai.cfg
uav-rai-demo/launch/: launch.py
uav-rai-demo/src/: demo1.cpp  ex_droneRace.cpp  ex_droneRace.h  experiment.cpp  experiment.h
